--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,73 @@
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <!--
           Create a Form with the following Controls and Validators
-          1) Project Name (should not be empty)
+          1) Project Name (should not be empty) 
+          !Done
+
           2) Mail (should not be a empty and a valid email)
-          3) Project Status Dropdown, with three values: 'Stable', 'Critical', 'Finished'
+          !Done
+
+          3) Project Status Dropdown, with three values: 'Stable', 
+          'Critical', 'Finished'
+          !Done
+          
           4) Submit Button
+          !Done
 
           Add your own Validator which doesn't allow "Test" as a Project Name
+          ! Done
 
           Also implement that Validator as an async Validator (replace the other one)
 
           Upon submitting the form, simply print the value to the console
       -->
+      <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
+        <!--! PROJECT NAME------------------------------ - -->
+        <div class="form-group">
+          <label for="projectName">Project Name</label>
+          <input
+            type="text"
+            id="projectName"
+            class="form-control"
+            [formControlName]="'projectName'"
+          />
+          <!-- <span
+            class="help-block"
+            *ngIf="projectForm.get('projectName').errors['nameIsForbidden']"
+          >
+            This name is forbidden
+          </span> -->
+        </div>
+
+        <!--! MAIL---------------------------------------- -->
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            type="text"
+            id="email"
+            class="form-control"
+            [formControlName]="'email'"
+          />
+        </div>
+
+        <!--! STATUS-------------------------------------- -->
+        <div class="form-group">
+          <label for="status"> Status </label>
+          <select
+            id="status"
+            class="form-control"
+            [formControlName]="'projectStatus'"
+          >
+            <option *ngFor="let status of statuses">{{ status }}</option>
+          </select>
+        </div>
+        <span
+          *ngIf="!projectForm.valid && projectForm.touched"
+          class="help-block"
+          >Please enter valid data!</span
+        >
+        <button class="btn btn-primary" type="submit">Submit</button>
+      </form>
     </div>
   </div>
 </div>
